--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,6 @@
-@import '/imports/variables';
-@import '/imports/reset';
-@import '/imports/base';
-@import '/imports/navbar';
-@import '/imports/article';
-@import '/imports/footer';
+@import 'imports/variables';
+@import 'imports/reset';
+@import 'imports/base';
+@import 'imports/navbar';
+@import 'imports/content';
+@import 'imports/footer';
