--- a/scss/imports/_navbar.scss
+++ b/scss/imports/_navbar.scss
@@ -61,11 +61,10 @@
         flex-direction: column;
         justify-content: space-evenly;
         background-color: $bg;
-        // box-sizing: border-box;
         margin: -3px;
         border: 2px solid black;
         position: absolute;
-        width: calc(97% + 2px);
+        width: calc(100% - 10px);
         transform: translateY(0);
         max-height: 1000px;
         opacity: 1;
@@ -78,8 +77,9 @@
             // width: auto;
             font-size: x-large;
             a {
-                display: inline-block;
+                display: block;
                 width: 100%;
+                height: 100%;
             }
             a:hover {
                 color: #635900;
